# master_thesis

./: .gitignore  index.html
ace_ws/: README.md
ace_ws/runs/: aggregate.py  hybrid2.csv  hybrid3.csv  random_local.csv  random_local_1.csv  random_local_2.csv  random_local_3.csv  test.csv  v4_4v_n10.csv  v4_local.csv  v4_local_v2.csv  v4_local_v2_2.csv
ace_ws/runs/Scenario1/acep/: ace_1.csv  ace_10.csv  ace_2.csv  ace_3.csv  ace_4.csv  ace_5.csv  ace_6.csv  ace_7.csv  ace_8.csv  ace_9.csv
ace_ws/runs/Scenario1/aggregates/: ace.csv  ace_by_time.csv  baseline.csv  baseline_by_time.csv
ace_ws/runs/Scenario1/baseline/: baseline_1.csv  baseline_10.csv  baseline_2.csv  baseline_3.csv  baseline_4.csv  baseline_5.csv  baseline_6.csv  baseline_7.csv  baseline_8.csv  baseline_9.csv
ace_ws/runs/Scenario2/acep/: ace_1.csv  ace_10.csv  ace_2.csv  ace_3.csv  ace_4.csv  ace_5.csv  ace_6.csv  ace_7.csv  ace_8.csv  ace_9.csv
ace_ws/runs/Scenario2/aggregates/: ace.csv  ace_by_time.csv  baseline.csv  baseline_by_time.csv  random.csv  random_by_time.csv  random_local.csv  random_local_by_time.csv
ace_ws/runs/Scenario2/baseline/: baseline_1.csv  baseline_10.csv  baseline_2.csv  baseline_3.csv  baseline_4.csv  baseline_5.csv  baseline_6.csv  baseline_7.csv  baseline_8.csv  baseline_9.csv
ace_ws/runs/Scenario3/acep/: 1.csv  10.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
ace_ws/runs/Scenario3/aggregates/: ace.csv  ace_by_time.csv  baseline.csv  baseline_by_time.csv
ace_ws/runs/Scenario3/baseline/: 1.csv  10.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
ace_ws/runs/ablation_studies/hybrid/: 1.csv  2.csv  3.csv
ace_ws/runs/aggregates/: baseline.csv  baseline_by_time.csv  baseline_global.csv  baseline_global_by_time.csv  random.csv  random_by_time.csv  random_local.csv  random_local_by_time.csv
ace_ws/runs/baseline/: baseline_1.csv  baseline_2.csv  baseline_3.csv
ace_ws/runs/baseline_global/: baseline_global_1.csv  baseline_global_2.csv  baseline_global_3.csv
ace_ws/runs/random/: random_1.csv  random_2.csv  random_3.csv
ace_ws/runs/random_local/: random_local_1.csv  random_local_2.csv  random_local_3.csv
ace_ws/runs/v4/: v4_4v_n10.csv  v4_v4_1.csv
ace_ws/runs/v4_local/: v4_local_1.csv
ace_ws/src/: move_robot.py
ace_ws/src/automatic_cell_explorer/: CMakeLists.txt  package.xml
ace_ws/src/automatic_cell_explorer/config/: config.yaml
ace_ws/src/automatic_cell_explorer/include/: logger.hpp
ace_ws/src/automatic_cell_explorer/include/automatic_cell_explorer/: calculate_NBV_lib.hpp  clustering.hpp  constants.hpp  ep_factory.hpp  execute_srv.hpp  exploration_planner.hpp  move_robot_lib.hpp  move_robot_service.hpp  moveit_interface.hpp  moveit_types.hpp  octomap_processor.hpp  state_machine.hpp  utils.hpp  visualize.hpp
ace_ws/src/automatic_cell_explorer/include/automatic_cell_explorer/exploration_planner/: demo_exploration_planner.hpp  evaluate_nbv.hpp  exploration_planner.hpp  exploration_planner_v2.hpp  improved_exploration_planner.hpp  nbv.hpp  random_exploration_planner.hpp  random_exploration_planner_v2.hpp  raycast.hpp
ace_ws/src/automatic_cell_explorer/include/automatic_cell_explorer/exploration_planner/exploration_planners/: baseline_planner.hpp  baseline_planner_global.hpp  baseline_planner_local.hpp  demo_exploration_planner.hpp  exploration_planner_ACE.hpp  exploration_planner_ACEP_global.hpp  exploration_planner_ACEP_local.hpp  exploration_planner_v2.hpp  exploration_planner_v3.hpp  exploration_planner_v4.hpp  random_exploration_planner.hpp  random_exploration_planner_v2.hpp
ace_ws/src/automatic_cell_explorer/include/automatic_cell_explorer/exploration_planner_utils/: sample_nbv.hpp
ace_ws/src/automatic_cell_explorer/launch/: ace.launch.py
ace_ws/src/automatic_cell_explorer/scripts/: move_robot.py  plotter.py
ace_ws/src/automatic_cell_explorer/src/: calculate_NBV_lib.cpp  clustering.cpp  commander.cpp  ep_factory.cpp  exploration_planner.cpp  main.cpp  move_robot.cpp  move_robot_lib.cpp  move_robot_service.cpp  moveit_interface.cpp  octomap_processor.cpp  octomap_sub.cpp  pc_filter.cpp  planner.cpp  ray_cast.cpp  raycast.cpp  state_machine.cpp  utils.cpp  visualize.cpp
ace_ws/src/automatic_cell_explorer/src/exploration_planner/: demo_exploration_planner.cpp  evaluate_nbv.cpp  exploration_planner.cpp  exploration_planner_v2.cpp  improved_exploration_planner.cpp  random_exploration_planner.cpp  random_exploration_planner_v2.cpp  raycast.cpp  sample_nbv.cpp
ace_ws/src/automatic_cell_explorer/src/exploration_planner/exploration_planners/: baseline_planner.cpp  baseline_planner_global.cpp  baseline_planner_local.cpp  demo_exploration_planner.cpp  exploration_planner_ACE.cpp  exploration_planner_ACEP_global.cpp  exploration_planner_ACEP_local.cpp  exploration_planner_v2.cpp  exploration_planner_v3.cpp  exploration_planner_v4.cpp  random_exploration_planner.cpp  random_exploration_planner_v2.cpp
ace_ws/src/automatic_cell_explorer/src/exploration_planner_utils/: evaluate_nbv.cpp  raycast.cpp  sample_nbv.cpp
ace_ws/src/automatic_cell_explorer/srv/: MoveToNbv.srv
ace_ws/src/automatic_cell_explorer/test/: exploration_planner_unit_test.cpp  state_machine_unit_test.cpp
ace_ws/src/automatic_cell_explorer/test/data/: test_octomap.bt
ace_ws/src/automatic_cell_explorer/worlds/: cell.sdf  cylinders.sdf  robot_cell.sdf  robot_cell_hard.sdf  slow_cell.sdf  square_cell.sdf  table.sdf
ace_ws/src/commander/: CMakeLists.txt
ace_ws/src/commander/src/: commander.cpp
ace_ws/src/models/Ecoforms_Plant_Pot_GP9AAvocado/: metadata.pbtxt  model.config  model.sdf
ace_ws/src/models/Hollow Cylinder/: model.config  model.sdf
ace_ws/src/models/Rubiks Cube/: model.config  rubiks_cube.sdf
ace_ws/src/models/aws_robomaker_warehouse_Bucket_01/: metadata.pbtxt  model.sdf
ace_ws/src/ur_moveit_config/: package.xml
ace_ws/src/ur_moveit_config_local/: CMakeLists.txt  package.xml
ace_ws/src/ur_simulation_gz/: CMakeLists.txt  package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
(+123 files in other folders)
