<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>automatic_cell_explorer</name>
  <version>0.0.0</version>
  <description>ACE</description>

  <author>Lovro Ivanov</author>
  <author email="denis@stoglrobotics.de">Denis Stogl</author>

  <maintainer email="exner@fzi.de">Felix Exner</maintainer>

  <license>BSD-3-Clause</license>

  <url type="bugtracker">https://github.com/UniversalRobots/Universal_Robots_ROS2_GZ_Simulation/issues</url>
  <url type="repository">https://github.com/UniversalRobots/Universal_Robots_ROS2_GZ_Simulation</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>


  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ur_moveit_config_local</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>


  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <depend>rclcpp</depend>
  <depend>octomap_msgs</depend>
  <depend>octomap</depend>
  <depend>sensor_msgs</depend> 
  <depend>pcl_conversions</depend> 
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>moveit_visual_tools</depend>
  <depend>liboctomap-dev</depend>


  <depend>geometry_msgs</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
